tests/positive/shebang_with_args/input.ci
#!/usr/local/bin/cimple
// Shebang with a custom path — still ignored.
// Also verifies args are passed correctly when invoked directly.
void main(string[] args) {
    print(toString(len(args)) + "\n");
    for (int i = 0; i < len(args); i++) {
        print(args[i] + "\n");
    }
}
