tests/negative/semantic/for_condition_int/input.ci
void main() {
    for (int i = 0; 1; i++) {
        print(toString(i) + "\n");
    }
}
